created ALL table schemas including join tables, using drizzle ORM, made a drizzle config file to store databse url safely, learned the difference in using a direct connection url versus a connection pool, which was causing issues with the migration and creation of the tables, needed to use connection pool url to stop authentication and connection errors since a direct connection isnt ipv4 compatible and would cause future issues with serverless deploying.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "drizzle-orm": "^0.44.7",
     "leaflet": "^1.9.4",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "tailwind": "^2.3.1"
   },
   "devDependencies": {
